syntax = "proto3";
package cache;

message CacheRequest {
  string key = 1;
}

message CacheResponse {
  string value = 1;
}

message CacheEntry {
  string key = 1;
  string value = 2;
}

message CacheAck {
  bool success = 1;
}

service CacheService {
  rpc Get(CacheRequest) returns (CacheResponse);
  rpc Set(CacheEntry) returns (CacheAck);
  rpc Invalidate(CacheRequest) returns (CacheAck);
}
